# vision-black-tech

./: .gitignore  1d_signal.py  README.md  analog_filter.py  camera_demo.py  camera_evm.py  camera_evm_Y.py  camera_evm_gau.py  camera_kcf.py  camera_magnify.py  camera_trace.py  camera_trace3.py  camera_trace9.py  camera_trace9in1.py  color_convert.py  color_model.py  filter.py  filtered_images.py  fourier_transform.py  ideal_filter.py  laplacian&gaussian_pyramid.py  laplacian_pyramid.py  magnitude_spectrum.py  pixel_information.py  rs_demo.py  rs_evm.py  rs_evm_gau.py  rs_evm_lap.py  rs_profiles.py  rs_trace.py  rs_trace_c.py  rs_trace_c_lap.py  rs_trace_color.py  rs_trace_lap.py  update_readme.py  wavelet_pyramid.py  win_readme.txt
DepthCam/2dmap/: CMakeLists.txt  main.cpp
DepthCam/3dpointcloud/: CMakeLists.txt  main.cpp
EVM_Matlab/: demo.m  testalpha.m  testchrom.m  testfreq.m  testlambda.m
EVM_Matlab/data/: download_video.py
Eulerian-Motion-Magnification-master/: CMakeLists.txt  README.md
Eulerian-Motion-Magnification-master/src/: main.cpp
